<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Android Tool</string>
    <string name="torch">Flashlight</string>
    <string name="torch_hint">Switch flashlight on/off</string>
    <string name="mobile_data">Mobile data usage</string>
    <string name="mobile_data_hint">Switch mobile data usage on/off</string>
    <string name="mobile_data_state">State:</string>
    <string name="mobile_data_state_unknown">unknown</string>
    <string name="mobile_data_state_connected">connected</string>
    <string name="mobile_data_state_disconnected">disconnected</string>
    <string name="mobile_data_state_connecting">connecting</string>
    <string name="mobile_data_state_suspended">suspended</string>
    <string name="title_activity_nfc">NfcActivity</string>
    <string name="wifi">Wifi</string>
    <string name="wifi_state_enabling">enabling</string>
    <string name="wifi_state_enabled">enabled</string>
    <string name="wifi_state_disabling">disabling</string>
    <string name="wifi_state_disabled">disabled</string>
    <string name="wifi_state_unknown">unknown</string>
    <string name="sensors">Sensors</string>
    <string name="sensor_description">Type: %1$s\nVendor: %2$s\nPower: %3$.1f mA</string>
    <string name="title_activity_sensors">Sensors</string>
    <string name="title_activity_sensor_detail">SensorDetailActivity</string>
    <string name="action_settings">Settings</string>

    <string name="sensor_name">Name: %s</string>
    <string name="sensor_vendor">Vendor: %s</string>
    <string name="sensor_version">Version: %d</string>
    <string name="sensor_power">Power: %.1f mA</string>
    <string name="sensor_type">Type: %1$s (%2$d)</string>
    <string name="sensor_batch_info">Fifo max event count: %1$d, reserved event count: %2$d</string>
    <string name="sensor_delay">Min delay: %d µs</string>
    <string name="sensor_range">Resolution: %1$.5f, Max Range: %2$.3f</string>
    <string name="sensor_event_info">Update count: %1$d, Accuracy: %2$d</string>
    <string name="title_activity_gps">GPS</string>
    <string name="gps_status">Status: %1$s\nFound %2$d of %6$d satellites\n%3$d used, %4$d with almanac, %5$d with ephermis\ntime to first fix: %7$d ms</string>
    <string name="gps_providers">All providers: %1$s\nEnabled providers: %2$s\nUsing best provider %3$s</string>
    <string name="gps_location_degree">Long: %1$s, Lat: %2$s degree</string>
    <string name="gps_location_minutes">Long: %1$s, Lat: %2$s minutes</string>
    <string name="gps_location_seconds">Long: %1$s, Lat: %2$s seconds</string>
    <string name="gps_location_info">Num. satellites: %1$d, accuracy: %2$.1fm, altitude: %3$.1fm, bearing: %4$.1f°, speed: %5$.1f m/s, %6$.1f km/h</string>
    <string name="gps_select_destination">Select destination</string>

</resources>
