<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="org.chris.android.tool.sensor.SensorDetailActivity">

        <TextView
            android:id="@+id/sensor_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sensor_name" />

        <TextView
            android:id="@+id/sensor_vendor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sensor_vendor" />

        <TextView
            android:id="@+id/sensor_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sensor_type" />

        <TextView
            android:id="@+id/sensor_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sensor_version" />

        <TextView
            android:id="@+id/sensor_power"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sensor_power" />

        <TextView
            android:id="@+id/sensor_batch_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sensor_batch_info" />

        <TextView
            android:id="@+id/sensor_delay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sensor_delay" />

        <TextView
            android:id="@+id/sensor_range"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sensor_range" />

        <TextView
            android:id="@+id/sensor_event_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/sensor_event_info" />

        <TextView
            android:id="@+id/sensor_last_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/sensor_graph"
            android:layout_width="fill_parent"
            android:layout_height="250dip"
            android:orientation="vertical" />

    </LinearLayout>

</LinearLayout>