<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:showDividers="middle"
              tools:context=".MainActivity">

    <Switch
        android:id="@+id/mobile_data_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="false"
        android:hint="@string/mobile_data_hint"
        android:text="@string/mobile_data"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="5dp"
            android:text="@string/mobile_data_state"/>

        <TextView
            android:id="@+id/mobile_data_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <Switch
        android:id="@+id/wifi_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/wifi"
        android:layout_marginTop="@dimen/activity_vertical_margin"/>

    <Switch
        android:paddingTop="5dp"
        android:id="@+id/torch_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="false"
        android:hint="@string/torch_hint"
        android:text="@string/torch"
        android:layout_marginTop="@dimen/activity_vertical_margin"/>

    <SurfaceView
        android:id="@+id/camera_preview"
        android:layout_width="1dp"
        android:layout_height="1dp"/>

    <Button
        android:id="@+id/sensor_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sensors"
        android:layout_marginTop="@dimen/activity_vertical_margin"/>

    <Button
        android:id="@+id/gps_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_gps"
        android:layout_marginTop="@dimen/activity_vertical_margin"/>

</LinearLayout>